gccida/c2/offset_address
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2526:4: error: expected ';' after expression
rtx v7; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2526:5: error: use of undeclared identifier 'v7'
rtx v7; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2535:1: error: use of undeclared identifier '_OWORD'
_OWORD *v16; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2535:9: error: use of undeclared identifier 'v16'
_OWORD *v16; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2542:35: error: use of undeclared identifier 'machine_mode'
v5 = simplify_gen_binary( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), rtx, offset); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2543:27: error: use of undeclared identifier 'machine_mode'
if ( !memory_address_p( ( machine_mode)*( ( unsigned __int8 *)memref + 2), v5) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2547:19: error: use of undeclared identifier 'machine_mode'
v6 = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), rtx); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2547:34: error: expected expression
v6 = force_reg( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)rtx), rtx); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2548:35: error: use of undeclared identifier 'machine_mode'
v5 = simplify_gen_binary( PLUS, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v6, offset); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2551:1: error: use of undeclared identifier 'v7'
v7 = change_address_1( memref, VOIDmode, v5, 1); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2552:18: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( __int64 *)memref[1]; 
                 ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2585:1: error: use of undeclared identifier 'v16'
v16 = ggc_alloc( 0x28uLL); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2586:9: error: use of undeclared identifier 'v16'
*slot = v16; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2587:15: error: use of undeclared identifier 'v16'
*( ( _QWORD *)v16 + 4) = v21; 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2589:1: error: use of undeclared identifier 'v16'
v16[1] = v20; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2590:2: error: use of undeclared identifier 'v16'
*v16 = v17; 
 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2594:14: error: use of undeclared identifier 'v7'
*( _QWORD *)&v7[1] = v14; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/emit-rtl.c:2595:8: error: use of undeclared identifier 'v7'
return v7; 
       ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/offset_address/src/obj/emit-rtl.o] Error 1
